--- a/client/signin.html
+++ b/client/signin.html
@@ -41,9 +41,9 @@
         </nav>
     </header>
     <main>
-        <h1>회원등록</h1>
+        <h1>회원로그인</h1>
         <h2>members</h2>
-        <form action="http://localhost:3000/create" method="post">
+        <form action="http://localhost:3000/login" method="post">
             <div>
                 <label for="user_id">아이디</label>
                 <input type="text" name="user_id">
@@ -52,20 +52,9 @@
                 <label for="user_pwd">비밀번호</label>
                 <input type="password" name="user_pwd">
             </div>
-            <div>
-                <label for="user_pwd2">비밀번호 확인</label>
-                <input type="password" name="user_pwd2" id="user_pwd2">
-            </div>
-            <div>
-                <label for="user_email">이메일</label>
-                <input type="email" name="user_email" id="user_email">
-            </div>
-            <div>
-                <label for="user_sns">sns</label>
-                <input type="url" name="user_sns" id="user_sns">
-            </div>
+            
             <div class="d-flex gap-1 justify-center">
-                <input type="submit" value="등록">
+                <input type="submit" value="로그인">
                 <input type="reset" value="취소">
             </div>
         </form>
